ubi-utils: update to latest 1.5.2 git HEAD

--- a/package/utils/ubi-utils/Makefile
+++ b/package/utils/ubi-utils/Makefile
@@ -8,8 +8,8 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ubi-utils
-PKG_REV:=7d2839b8dede3ae368780364b4a07473d2303219
-PKG_VERSION:=1.5.1
+PKG_REV:=90f2151eb19757a27af2dd710237e69a64740c12
+PKG_VERSION:=1.5.2
 PKG_RELEASE:=2
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
@@ -17,7 +17,7 @@ PKG_SOURCE_URL:=git://git.infradead.org/mtd-utils.git
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=$(PKG_REV)
-PKG_MIRROR_MD5SUM:=69b68adcfcbe786584771e5978534ab4
+PKG_MIRROR_MD5SUM:=
 
 PKG_INSTALL:=1
 
